# spec

./: AUDIT.md  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SPEC-v0.1.md  demo_pii_signup.py  run_demo.sh
broker/: app.py
docs/: ARCHITECTURE.md  CNAME  PCC-INTEGRATION.md  index.html  wrangler.jsonc
poc/: run_demo.sh
poc/broker/: app.py  nitro_attestation.py
poc/docs/: ARCHITECTURE.md
poc/receiver/: app.py
poc/sender/: app.py
receiver/: app.py
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/broker/: main.rs  mod.rs
rust/src/crypto/: mod.rs
rust/src/receiver/: main.rs  mod.rs
rust/src/sender/: main.rs  mod.rs
rust/tests/: stress_test.rs  verify_test.rs
sender/: app.py
