[package]
name = "clawback-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Maurice Ferdinand <hello@clawbackprotocol.org>"]
description = "Clawback Protocol — cryptographically enforced, revocable data sharing"
license = "AGPL-3.0"
repository = "https://github.com/clawback-protocol/spec"

[[bin]]
name = "broker"
path = "src/broker/main.rs"

[[bin]]
name = "sender"
path = "src/sender/main.rs"

[[bin]]
name = "receiver"
path = "src/receiver/main.rs"

[[bin]]
name = "clawback-verify"
path = "src/bin/verify.rs"

[lib]
name = "clawback"
path = "src/lib.rs"

[dependencies]
# Crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
umbral-pre = { version = "0.11", features = ["default-serialization"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
uuid = { version = "1", features = ["v4"] }

# HTTP (broker/sender/receiver services)
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"

# HTTP client (sender/receiver → broker)
reqwest = { version = "0.12", features = ["json"] }

# Encoding
base64 = "0.22"

# Utils
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"
